--- a/css/index.css
+++ b/css/index.css
@@ -131,7 +131,7 @@ footer{
     background-color: #3b3939;
     float: left;
     opacity: 85%;
-}s
+}
 footer p{
     color: #FFF;
     font-size: 17px;
